--- a/src/components/AboutPage/__aboutPage.scss
+++ b/src/components/AboutPage/__aboutPage.scss
@@ -24,7 +24,8 @@
     color: white;
     text-align: center;
     position: absolute;
-    bottom: 5px;
+    font-size: 1.2rem;
+    bottom: 25px;
     left: 44%;
   }
 
@@ -183,7 +184,12 @@
       }
 
       .bottom__paragraph {
-        display: none;
+        color: white;
+        text-align: center;
+        position: absolute;
+        font-size: 1.2rem;
+        bottom: 25px;
+        left: 36%;
       }
     }
   }
